IE9 search input alignment fix [fixes #25022169]

--- a/scss/base/_globals.scss
+++ b/scss/base/_globals.scss
@@ -53,7 +53,7 @@ input, textarea {
     font-size: 14px;
     padding: 3px;
     font-family: Myriad Pro, Verdana;
-    @include box-sizing(border-box);
+    @include borderbox;
 }
 
 textarea {
